# $NetBSD: CHANGES-9.5,v 1.1.2.94 2026/01/25 16:45:52 martin Exp $

A complete list of changes from the NetBSD 9.4 release to the NetBSD 9.5
release:

external/gpl2/groff/tmac/mdoc.local		patched by hand
sys/sys/param.h 				patched by hand
doc/README.files				patched by hand
doc/CHANGES-9.5 				added

	Welcome to 9.4_STABLE.
	[martin]

sys/netinet6/frag6.c				1.78

	inet6: fix calculation of fragment length.
	[ozaki-r, ticket #1836]

sys/dev/usb/uftdi.c				1.78
sys/dev/usb/usbdevs				1.815
sys/dev/usb/usbdevs.h				(regen)
sys/dev/usb/usbdevs_data.h			(regen)

	uftdi(4): PR 58127: add some USB serial adapters.
	[maya, ticket #1837]

sys/arch/hp300/stand/inst/Makefile		1.11
sys/arch/hp300/stand/uboot/Makefile		1.11

	hp300: PR 58211: fix hardlinks in /usr/mdec.
	[tsutsui, ticket #1838]

sys/arch/mac68k/dev/pm_direct.c			1.31

	mac68k: avoid random crashes on some Powerbook models
	when using mouse or keyboard.
	[nat, ticket #1839]

sys/dev/hil/hil.c				1.8

	hp300: fix "stray level 1 interrupt" panic by pressing keys
	during autoconf(9).
	[tsutsui, ticket #1840]

sbin/disklabel/main.c				1.58

	disklabel(8): avoid writing a label to the wrong sector
	on some architectures from installer/ramdisk versions of
	the disklabel command.
	[tsutsui, ticket #1841]

sys/arch/hp300/hp300/autoconf.c			1.113

	hp300: fix boot device selection for SCSI disks.
	[tsutsui, ticket #1842]

sys/dev/pci/eap.c				1.103

	eap(4): restore the full set of supported hardware encodings
	from netbsd-7.
	[nia, ticket #1843]

share/man/man4/eap.4				1.18-1.20

	eap(4): improve man page.
	[nia, ticket #1844]

external/bsd/tre/dist/src/agrep.c		1.5,1.6 (patch)

	agrep(1): PR 53513: rewrite check for binary files.
	[andvar, ticket #1845]

sys/dev/usb/if_urtwn.c				1.108
sys/dev/usb/usbdevs				1.812
sys/dev/usb/usbdevs.h				(regen)
sys/dev/usb/usbdevs_data.h			(regen)

	urtwn(4): PR 57819: add Mercusys and Mercusys MW150USV2 support.
	[nia, ticket #1846]

sys/arch/mac68k/dev/aed.c			1.39