@@ -1,4 +1,4 @@
-# $NetBSD: CHANGES-9.5,v 1.1.2.94 2026/01/25 16:45:52 martin Exp $
+# $NetBSD: CHANGES-9.5,v 1.1.2.95 2026/01/25 18:11:29 martin Exp $
 
 A complete list of changes from the NetBSD 9.4 release to the NetBSD 9.5
 release:
@@ -1258,6 +1258,7 @@ sys/arch/amd64/include/frameasm.h		1.56
 sys/arch/i386/i386/i386_trap.S			1.25
 sys/arch/i386/i386/locore.S			1.206
 sys/arch/i386/i386/spl.S			1.59
+sys/arch/i386/i386/vector.S			(apply patch)
 sys/arch/i386/include/frameasm.h		1.36
 sys/arch/x86/x86/fpu.c				1.94
 sys/arch/xen/x86/xen_intr.c			1.32
